src/test/ui/reachable/expr_if.stderr
error: unreachable block in `if` expression
  --> $DIR/expr_if.rs:7:17
   |
LL |       if {return} {
<<<<<<< HEAD   (086005 Importing rustc-1.38.0)
   |  _________________^
LL | |         println!("Hello, world!");
LL | |     }
   | |_____^
=======
   |  _________------__^
   | |         |
   | |         any code following this expression is unreachable
LL | |         println!("Hello, world!");
LL | |     }
   | |_____^ unreachable block in `if` expression
>>>>>>> BRANCH (8cd2c9 Importing rustc-1.39.0)
   |
note: lint level defined here
  --> $DIR/expr_if.rs:4:9
   |
LL | #![deny(unreachable_code)]
   |         ^^^^^^^^^^^^^^^^

error: unreachable statement
  --> $DIR/expr_if.rs:27:5
   |
<<<<<<< HEAD   (086005 Importing rustc-1.38.0)
LL |     println!("But I am.");
   |     ^^^^^^^^^^^^^^^^^^^^^^
=======
LL |         return;
   |         ------ any code following this expression is unreachable
...
LL |     println!("But I am.");
   |     ^^^^^^^^^^^^^^^^^^^^^^ unreachable statement
>>>>>>> BRANCH (8cd2c9 Importing rustc-1.39.0)
   |
   = note: this error originates in a macro outside of the current crate (in Nightly builds, run with -Z external-macro-backtrace for more info)

error: aborting due to 2 previous errors

